# Labs-and-Practice-C-for-Chelgu

./: .gitattributes  .gitignore  CMakeLists.txt  Labs and Practice (1 course).sln  README.md  build.bat  build.sh
ASCII/: ASCII.txt  ASCII.vcxproj  main.c
Lab_1/: Lab_1.vcxproj  Lab_1.vcxproj.filters  input.txt  main.c
Lab_10/: Header.h  Lab_10.vcxproj  Lab_10.vcxproj.filters  MenuSelection.c  main.c
Lab_2/: Lab_2.vcxproj  Lab_2.vcxproj.filters  main.c  main.h
Lab_3/: Lab_3.vcxproj  Lab_3.vcxproj.filters  book.txt  main.c
Lab_4/: Lab_4.vcxproj  Lab_4.vcxproj.filters  main.c  main.h  strfind.c
Lab_5/: Lab_5.vcxproj  Lab_5.vcxproj.filters  ReadLine.c  main.c  main.h  my_exception.c
Lab_6/: Header.h  Lab_6.vcxproj  Lab_6.vcxproj.filters  main.c
Lab_7/: BruteForce.c  FullBruteForce.c  HashRot13.c  Header.h  Lab_7.vcxproj  Lab_7.vcxproj.filters  Report.txt  Result.txt  ScanString.c  StringBruteForce.c  main.c
Lab_8/: FileCheck.c  Header.h  Lab_8.vcxproj  Lab_8.vcxproj.filters  main.c  save.txt
Lab_9_1/: Draw.c  Header.h  Lab_9_1.vcxproj  Lab_9_1.vcxproj.filters  PaintSnow.c  main.c
Lab_9_2/: Header.h  Lab_9_2.vcxproj  Lab_9_2.vcxproj.filters  MenuColors.c  RandomString.c  main.c
Pract_1/: Header.h  Pract_1.vcxproj  Pract_1.vcxproj.filters  main.c
Pract_2_1/: FunctionsExample.c  Header.h  HexFile.c  MenuSelection.c  Pract_2_1.vcxproj  Pract_2_1.vcxproj.filters  ScanINT.c  ScanString.c  main.c
Pract_2_2/: FileCheck.c  FileStrReplace.c  GetArgv.c  Header.h  Pract_2_2.vcxproj  Pract_2_2.vcxproj.filters  input.txt  main.c  output.txt
Pract_2_3/: GenPass.c  Header.h  ParseArgv.c  Pract_2_3.vcxproj  Pract_2_3.vcxproj.filters  main.c
Pract_3_1/: Pract_3_1.vcxproj  main.c
Pract_3_2/: Header.h  Pract_3_2.vcxproj  Pract_3_2.vcxproj.filters  main.c
Pract_4_1/: Pract_4_1.vcxproj  Pract_4_1.vcxproj.filters  main.c
Pract_4_2/: Pract_4_2.vcxproj
Pract_5/: Pract_5.vcxproj
lab8/: sav  (+4 more)
(+171 files in other folders)
